[project]
name = "ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "streamlit>=1.38.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "selenium>=4.24.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "html5lib>=1.1",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
